Removes README.md from site generation
Fixes a bug where README.md was being generated by Jekyll into the final
site.

--- a/_config.yaml
+++ b/_config.yaml
@@ -6,5 +6,8 @@ highlighter:    rouge
 destination:    ./_site
 layouts_dir:    _layouts
 
+# File Reading
+exclude:    ["Gemfile", "Gemfile.lock", "node_modules", "vendor/bundle/", "vendor/cache/", "vendor/gems/", "vendor/ruby/", "README.md"]
+
 # Other
 name:   Vingenuity
