--- a/_config.yaml
+++ b/_config.yaml
@@ -7,6 +7,7 @@ destination:    ./_site
 layouts_dir:    _layouts
 
 # File Reading
+encoding:   "utf-8"
 exclude:    ["Gemfile", "Gemfile.lock", "node_modules", "vendor/bundle/", "vendor/cache/", "vendor/gems/", "vendor/ruby/", "README.md"]
 
 # Other
