Adds blog section
Adds an additional config for blog permalinks to _config.yaml.
Adds a new test layout for blog posts.
Adds a new directory and index page for blog posts.
Adds a new _posts directory and an initial blog post into that directory
for format testing.

--- a/_config.yaml
+++ b/_config.yaml
@@ -12,3 +12,6 @@ exclude:    ["Gemfile", "Gemfile.lock", "node_modules", "vendor/bundle/", "vendo
 
 # Other
 name:   Vingenuity
+
+# Output
+permalink:  /blog/:year/:month/:day/:title
