Adds blog RSS feed
Adds an atom.xml file to the blog/directory for RSS support.
Adds a url config setting to _config.yaml.

--- a/_config.yaml
+++ b/_config.yaml
@@ -12,6 +12,7 @@ exclude:    ["Gemfile", "Gemfile.lock", "node_modules", "vendor/bundle/", "vendo
 
 # Other
 name:   Vingenuity
+url:    http://vingenuity.github.io/
 
 # Output
 permalink:  /blog/:year/:month/:day/:title
